Fix for holding down alt and shift BEFORE gaining mouse focus and clicking.

--- a/client/src/components/WeekPlanner.scss
+++ b/client/src/components/WeekPlanner.scss
@@ -85,6 +85,7 @@ html {
             margin-top: 59px;
             margin-left: 80px;
             background-color: transparent;
+            outline: none;
         }
         &--hours {
             color: #fff;
